# rust.zsh-system

./: Cargo.toml  README.md  build.rs  wrapper.h
lib/: wrapper.h
src/: bindings.rs  envs.rs  lib.rs  macros.rs  module.rs  shell.rs  zalloc.rs
src/envs/: direct.rs
src/module/: builtin.rs  conddef.rs  features.rs  hook.rs  mathfunc.rs  paramdef.rs
tests/: module_test.rs
